<resources>
    <string name="app_name">Group App</string>

    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="content_description_search">Tìm kiếm</string>
    <string name="content_description_more">More</string>
    <string name="hint_search_app">Nhập vào</string>
    <string name="recent_group">Gần đây</string>
    <string name="top_group">Sử dụng nhiều nhất</string>
    <string name="transition_to_detail" translatable="false">transition_to_detail</string>
    <string name="application_title">Ứng dụng</string>
    <string name="game_title">Trò chơi</string>
    <string name="waiting_sync">Lần đồng bộ đầu tiên có thể kéo dài tới 1 phút</string>
    <string name="required_network">Đồng bộ data yêu cầu kết nối mạng</string>
    <string name="action_reload">Tải lại</string>
    <string name="notify_reload">Bạn chỉ nên tải lại dữ liệu khi có một số ứng dụng được sắp xếp không hợp lý, chúng tôi sẽ sớm ra mắt tính năng tuỳ biến theo sở thích của bạn</string>
    <string name="notify_title">Thông báo</string>
    <string name="cancel_action">Huỷ</string>
    <string name="accept_action">Đồng ý</string>
    <string name="loading_info">Đang lấy thông tin của: %s \n Yêu cầu kết nối mạng ổn định</string>
    <string name="click_failure_message">Đang trong quá trình đồng bộ dữ liệu, bạn thông thể thực hiên thao tác</string>
    <string name="empty_message">Chưa có dữ liệu, vui lòng kiểm tra lại</string>
    <string name="request_permission_get_genre">Group App sẽ có thể lấy tất cả các Installed Application trên thiết bị, nó có thể bao gồm thông tin của ứng dụng cũng như tên ứng dụng và packagename. Nó sẽ phục vụ cho việc Group App lấy thông tin nhóm và thể loại của ứng dụng có liên quan để sắp xếp lại danh sách ứng dụng và hiển thị trên màn hình &lt;br>●&lt;b> PRIVACY POLICY&lt;/b>&lt;br>https://sites.google.com/view/group-app-policy/home​</string>
    <string name="request_permission_failure_notify">Bạn chưa đồng ý lấy thông tin danh sách ứng dụng được cài đặt trên thiết bị</string>
    <string name="request_permission_failure_notify_reaction">●&lt;b> Get Installed Application permission&lt;/b>&lt;br> Dùng để lấy danh sách tất cả các ứng dụng trên thiết bị phục vụ cho việc hiển thị và phân chia nhóm ứng dụng sau đó hiển thị lại lên màn hình &lt;br>●&lt;b> PRIVACY POLICY&lt;/b>&lt;br>https://sites.google.com/view/group-app-policy/home​</string>
    <string name="app_title_permission">Group App cần quyền truy cập</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="privacy_policy_link" translatable="false">https://sites.google.com/view/group-app-policy/home​</string>
    <string name="action_ok" translatable="false">Ok</string>
    <string name="action_view">Hiển thị</string>

    <string name="privacy_policy_title" translatable="false">Notice of Privacy Policy</string>
    <string name="privacy_policy_content" translatable="false">Thank you for trust and using our products and services. In compliance with the lastest legal requirements, we have made updates to out Privacy Policy
     and we process your Personal Information based on the specific function you use of our services. The Personal Information we collect may include your Installed Application on your device.
    The purpose of out is to improve user experiences and to provide services to you. The legal basic we process your personal data is your consents or the applicable law. When we process your Personal Data, the entity contacts with you or replies to your request is the controller. Please red the Privacy Policy carefully so  as to understand the principles we process your Personal Infomation.</string>
    <string name="privacy_policy_content_accept" translatable="false">If you accept the Privacy Policy, please click Agree to use our products and services. We will strive to safeguard your Personal Information in accordance with applicable law.</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="agree" translatable="false">Agree</string>

</resources>
